implmented several classes according to tests